# sdl2-rendercopyex-demo

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
